# AdaSDF-CL

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
benchmarks/: adasdf_benchmark_batch_query.cpp  adasdf_benchmark_sdf_creation.cpp
cmake/: AdaSDFCLConfig.cmake.in  adasdf_cl_version.cmake
docs/: active_block_cache.md  active_block_cache_hash_lookup.md  active_block_cache_v1_10_report.md  active_block_expansion_cache.md  adaptive_block_sdf_builder_v1_6_report.md  adaptive_block_sdfbin_format.md  adaptive_build_sample_cache.md  adaptive_builder_integration_audit.md  adaptive_builder_preview.md  adaptive_dense_vs_compressed_sdf.md  adaptive_octree_block_builder.md  adaptive_sdf_compiler_preview_v1_18.md  adaptive_vs_dense_sdf.md  adasdf_cl_audit_report.md  adasdf_cl_first_pass_report.md  adasdf_cl_github_publication_preflight_report.md  adasdf_cl_v0_2_sdfbin_integration_report.md  adasdf_cl_v0_3_pair_query_report.md  adasdf_cl_v0_4_plus_adaptive_builder_and_dash_report.md  adasdf_cl_v0_5_cpu_narrowphase_report.md  adasdf_cl_v0_6_alpha_release_hardening_report.md  adasdf_cl_v0_7_external_integration_report.md  alpha_status.md  api_design.md  architecture.md  backend_json_contract.md  benchmarking.md  block_cache_benchmarking.md  block_lookup_benchmarking.md  build_cache_benchmarking.md  build_profiler.md  build_recommendation_schema.md  builder_acceleration_benchmarking.md  bvh_accelerated_builder.md  bvh_builder_acceleration_v1_12_report.md  bvh_distance_and_sign_queries.md  capability_audit_v1_1_1.md  capability_exposure_v1_1_1_report.md  capability_matrix.md  ci_hotfix_v1_13_0_alpha_1_report.md  (+150 more)
examples/: 01_build_adaptive_sdf.cpp  02_load_sdfbin_and_query.cpp  03_collision_between_two_objects.cpp  04_batched_gpu_query.cpp  05_fcl_style_api.cpp  06_build_then_query.cpp  07_contact_reduction_demo.cpp  08_core_free_demo_collision.cpp  09_surrogate_adaptive_demo.cpp  10_two_box_collision_with_view.cpp  11_capability_walkthrough.cpp  12_mesh_diagnostics_demo.cpp  13_mesh_cleanup_demo.cpp  14_stl_to_dense_sdf_demo.cpp  15_adaptive_builder_preview_demo.cpp  16_stl_to_adaptive_block_sdf_demo.cpp  17_adaptive_vs_dense_sdf_demo.cpp  18_adaptive_block_compression_demo.cpp  19_dense_adaptive_compressed_comparison_demo.cpp  20_build_recommendation_demo.cpp  README.md
examples/downstream_cmake_project/: CMakeLists.txt  README.md  main.cpp
python/: README.md  pyproject.toml
python/adasdf/: __init__.py
python/adasdf_cli/: __init__.py  config.py  exceptions.py  parsers.py  results.py  runner.py  tools.py  workflows.py
python/tests/: test_parsers.py  test_python_backend_contract.py  test_python_block_lookup_wrapper.py  test_python_build_cache_wrapper.py  test_python_build_profile.py  test_python_cli_smoke.py  test_python_contact_band_wrapper.py  test_runner.py  test_strict_reports.py  test_tools_command_building.py
reports/: alpha_validation_summary.md  benchmark_batch_query_template.csv  benchmark_batch_query_template.md  install_validation_summary.md
schemas/: adasdf.benchmark.v1.schema.json  adasdf.block_grid.v1.schema.json  adasdf.build_profile.v1.schema.json  adasdf.collide.v1.schema.json  adasdf.compression.v1.schema.json  adasdf.error.v1.schema.json  adasdf.info.v1.schema.json  adasdf.progress.v1.schema.json  adasdf.structure.v1.schema.json
scripts/: check_repo_clean.py  run_alpha_validation.py  run_install_validation.py
tests/: README.md  active_block_test_helpers.h  contract_cli_test_helpers.h  test_aabb_broadphase.cpp  test_active_block_cache_vs_direct.cpp  test_active_block_hash_map.cpp  test_active_block_query.cpp  test_active_block_query_cli.cpp  test_active_block_query_hash_lookup.cpp  test_active_block_report_writer.cpp  test_active_block_selector.cpp  test_active_block_spatial_hash.cpp  test_adaptive_block_partitioner.cpp  test_adaptive_block_sdf_builder.cpp  test_adaptive_block_sdf_builder_bvh.cpp  test_adaptive_block_sdf_model.cpp  test_adaptive_block_sdfbin_roundtrip.cpp  test_adaptive_builder.cpp  test_adaptive_builder_hierarchical_sampling.cpp  test_adaptive_builder_preview.cpp  test_adaptive_builder_preview_updated.cpp  test_adaptive_builder_preview_v1_7.cpp  test_adaptive_builder_preview_v1_8.cpp  test_adaptive_octree_builder.cpp  test_adaptive_refinement_cache.cpp  test_adaptive_sdf_collision.cpp  test_adaptive_tensor_compressor.cpp  test_adaptive_tree_stats.cpp  test_adaptive_tree_stats_writer.cpp  test_adaptive_vs_dense_consistency.cpp  test_analytic_sdf_model.cpp  test_audit_compression_near_surface.cpp  test_audit_query_source_explain.cpp  test_audit_sdf_accuracy_cli.cpp  test_backend_json_contract.cpp  test_backend_parameter_advisor.cpp  test_batch_query_cpu.cpp  test_benchmark_block_cache_cli.cpp  test_benchmark_block_lookup_cli.cpp  test_benchmark_build_cache_cli.cpp  (+249 more)
tests/package/: CMakeLists.txt  run_package_test.cmake  test_find_package.cpp
tools/: BuildCliProfileHelpers.h  ModelJsonHelpers.h  README.md  adasdf_active_block_query.cpp  adasdf_audit_compression_near_surface.cpp  adasdf_audit_sdf_accuracy.cpp  adasdf_benchmark.cpp  adasdf_benchmark_block_cache.cpp  adasdf_benchmark_block_lookup.cpp  adasdf_benchmark_build_cache.cpp  adasdf_benchmark_builder_acceleration.cpp  adasdf_benchmark_collision_world.cpp  adasdf_benchmark_contact_band_sampling.cpp  adasdf_benchmark_contact_reduction.cpp  adasdf_benchmark_cuda_block_cache.cpp  adasdf_benchmark_exact_hotpath.cpp  adasdf_benchmark_hierarchical_sampling.cpp  adasdf_benchmark_sparse_query.cpp  adasdf_build.cpp  adasdf_build_adaptive_sdf.cpp  adasdf_build_adaptive_sdf_preview.cpp  adasdf_build_compressed_sdf.cpp  adasdf_build_demo_adaptive.cpp  adasdf_build_dense_sdf.cpp  adasdf_build_narrowband_brick_sdf.cpp  adasdf_capabilities.cpp  adasdf_collect_run_summary.cpp  adasdf_collide.cpp  adasdf_collide_boxes_demo.cpp  adasdf_compress.cpp  adasdf_compress_adaptive_sdf.cpp  adasdf_contact_candidates.cpp  adasdf_create_sdf.cpp  adasdf_cuda_active_block_query.cpp  (+30 more)
(+463 files in other folders)
