[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adasdf-cli"
version = "1.17.1a0"
description = "Lightweight Python CLI wrapper for AdaSDF-CL tools"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["adasdf_cli*"]
